--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <header>
-      <h1>Ukule project</h1>
+      <h1>Ukulele project</h1>
     </header>
     <main>
       <div id="root"></div>
