--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Fretboard exploration project</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <header>
-      <h1>Ukulele project</h1>
+      <h1>Fretboard exploration proj</h1>
     </header>
     <main>
       <div id="root"></div>
