--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
     </main>
     <footer>
       <p>Artem Chigin 2023</p>
+        <a class="repository-link" href="https://github.com/artem-chigin/ukulele_project">
+          <p>Link to repository</p>
+          <img src=".%PUBLIC_URL%/github-mark-white.png" alt="Link to repository" width="32" height="32"/>
+        </a>
     </footer>
   </body>
 </html>
