reworked styles from vh and vw to rem. And adapted if for 1980px

--- a/public/index.html
+++ b/public/index.html
@@ -27,19 +27,28 @@
     <title>Fretboard map</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <header>
-      <h1>Fretboard representation</h1>
-    </header>
-    <main>
-      <div id="root"></div>
-    </main>
-    <footer>
-      <p>Artem Chigin 2023</p>
-        <a class="repository-link" href="https://github.com/artem-chigin/ukulele_project">
+    <div class="screen">
+      <header>
+        <h1>Fretboard representation</h1>
+      </header>
+      <main id="root" class="main">
+        <!-- <div id="root" class="root"></div> -->
+      </main>
+      <footer>
+        <p>Artem Chigin 2023</p>
+        <a
+          class="repository-link"
+          href="https://github.com/artem-chigin/ukulele_project"
+        >
           <p>Link to repository</p>
-          <img src=".%PUBLIC_URL%/github-mark-white.png" alt="Link to repository" width="32" height="32"/>
+          <img
+            src=".%PUBLIC_URL%/github-mark-white.png"
+            alt="Link to repository"
+            width="32"
+            height="32"
+          />
         </a>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
