added mail link

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,29 @@
     <div class="screen">
       <header>
         <h1>Fretboard representation</h1>
+      </header>
+      <main id="root" class="main">
+        <!-- <div id="root" class="root"></div> -->
+      </main>
+      <footer>
+        <p class="footer-text">
+          Artem Chigin 2023 - <span class="current-year">%CURRENT_YEAR%</span>
+        </p>
         <div class="contacts">
+          <a href="mailto:chiartftc@gmail.com" class="contacts-link">
+            <svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              fill="#000000"
+              viewBox="0 0 256 256"
+            >
+              <path
+                d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48Zm-96,85.15L52.57,64H203.43ZM98.71,128,40,181.81V74.19Zm11.84,10.85,12,11.05a8,8,0,0,0,10.82,0l12-11.05,58,53.15H52.57ZM157.29,128,216,74.18V181.82Z"
+              ></path>
+            </svg>
+          </a>
           <a
             class="contacts-link"
             href="https://github.com/artem-chigin/fretboard-map"
@@ -51,14 +73,6 @@
             </svg>
           </a>
         </div>
-      </header>
-      <main id="root" class="main">
-        <!-- <div id="root" class="root"></div> -->
-      </main>
-      <footer>
-        <p class="footer-text">
-          Artem Chigin 2023 - <span class="current-year">%CURRENT_YEAR%</span>
-        </p>
       </footer>
     </div>
   </body>
